--- a/core-common/pom.xml
+++ b/core-common/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>core-ges</artifactId>
+    <artifactId>core-common</artifactId>
 
     <dependencies>
         <dependency>
@@ -21,17 +21,36 @@
             <groupId>io.github.cmu-phil</groupId>
             <artifactId>tetrad-lib</artifactId>
         </dependency>
-        
+
+        <dependency>
+            <groupId>io.github.cmu-phil</groupId>
+            <artifactId>data-reader</artifactId>
+        </dependency>
+
+        <!--Tests Junit 5-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <!--Test Resources module-->
         <dependency>
             <groupId>io.github.jlaborda</groupId>
-            <artifactId>core-common</artifactId>
+            <artifactId>test-utils</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <!--Caffeine LRU dependency-->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
+        <!-- Weka dependency -->
+        <dependency>
+            <groupId>nz.ac.waikato.cms.weka</groupId>
+            <artifactId>weka-stable</artifactId>
         </dependency>
     </dependencies>
 
