--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,19 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <modules>
+        <module>core-common</module>
         <module>core-ges</module>
         <module>core-mcts</module>
         <module>pges</module>
         <module>cges</module>
         <module>mctsbn</module>
         <module>pmctsbn</module>
+        <module>test-utils</module>
     </modules>
 
     <dependencyManagement>
@@ -52,6 +54,19 @@
                 <version>5.9.0</version>
                 <scope>test</scope>
             </dependency>
+            <!--Caffeine LRU dependency-->
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>3.1.8</version>
+            </dependency>
+            <!-- Weka dependency -->
+            <dependency>
+                <groupId>nz.ac.waikato.cms.weka</groupId>
+                <artifactId>weka-stable</artifactId>
+                <version>3.8.6</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
